k8s/k8s-warehouse-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: warehouse
  name: warehouse-service-ingress
  namespace: warehouse
spec:
  rules:
  - host: warehouse-service.127.0.0.1.nip.io
    http:
      paths:
      - backend:
          serviceName: warehouse-service
          servicePort: 8080
        path: /
